--- a/projects-service/projects-service-api/build.gradle
+++ b/projects-service/projects-service-api/build.gradle
@@ -1,1 +1,5 @@
 apply plugin: 'java'
+
+dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springboot
+}
