--- a/projects-service/projects-service-api/src/main/resources/application.properties
+++ b/projects-service/projects-service-api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url=jdbc:mysql://localhost/projects
-spring.datasource.username=projects_user
-spring.datasource.password=projects_user
-spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/projects_db
+spring.datasource.username=projects_pg
+spring.datasource.password=projects_pg
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
