--- a/projects-service/projects-service-api/build.gradle
+++ b/projects-service/projects-service-api/build.gradle
@@ -2,4 +2,5 @@ apply plugin: 'java'
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springboot
+    compile group: 'postgresql', name: 'postgresql', version: postgresql
 }
