--- a/projects-service/build.gradle
+++ b/projects-service/build.gradle
@@ -3,6 +3,7 @@ ext {
     springframework = '5.2.3.RELEASE'
     springdata = '2.2.4.RELEASE'
     postgresql = '9.1-901.jdbc4'
+    junit = '4.12'
 }
 
 subprojects {
