--- a/projects-service/projects-service-api/src/main/resources/application.properties
+++ b/projects-service/projects-service-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/projects_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/projects_db?currentSchema=projects
 spring.datasource.username=projects_pg
 spring.datasource.password=projects_pg
 spring.datasource.driver-class-name=org.postgresql.Driver
